@@ -1,3 +1,9 @@
+2006-12-08  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* Alacarte/DialogHandler.py:
+	* Alacarte/MenuEditor.py:
+	Mark all strings for translation.
+
 2006-12-07  Rob Bradford  <rob@robster.org.uk>
 
 	* Alacarte/MainWindow.py:
